# fossfolio

./: .gitignore  LICENSE.md  README.md  index.md  install.sh  installer.sh  pyproject.toml  requirements.txt
.github/workflows/: codacy.yml  codeql.yml
fossfolio/: __init__.py  build.py  config.py  sitemap.py  templating.py  utils.py
fossfolio/content/: dummy2.md  intro.md
fossfolio/content/posts/: dummy.md  hello there.md
fossfolio/plugins/: inject.py
fossfolio/plugins/css_inject/: main.py
fossfolio/plugins/date_time/: main.py
fossfolio/plugins/draft_manager/: config.yml  main.py
fossfolio/plugins/user_metadata/: main.py
fossfolio/templates/_default/: index.html  list.html
fossfolio/templates/_default/base/: base.html
fossfolio/templates/_default/partials/: footer.html
fossfolio/templates/blogtastic/: _default.html  config.yml  index.html  post.html
fossfolio/templates/blogtastic/base/: base.html
fossfolio/templates/blogtastic/partials/: footer.html  navigator.html
